// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetActionButtons should render correctly 1`] = `
<TouchableOpacity
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexShrink": 1,
        "justifyContent": "center",
        "marginHorizontal": 0,
        "minWidth": 60,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignContent": "center",
        "backgroundColor": "#037dd6",
        "borderRadius": 18,
        "height": 36,
        "justifyContent": "center",
        "paddingLeft": 1,
        "paddingTop": 4,
        "width": 36,
      }
    }
  />
  <Text
    black={false}
    blue={false}
    bold={false}
    centered={true}
    disclaimer={false}
    green={false}
    link={false}
    modal={false}
    numberOfLines={1}
    primary={false}
    red={false}
    reset={false}
    right={false}
    small={false}
    strikethrough={false}
    style={
      Object {
        "color": "#037dd6",
        "fontSize": 14,
        "marginTop": 8,
      }
    }
    underline={false}
    upper={false}
  />
</TouchableOpacity>
`;

exports[`AssetActionButtons should render type add correctly 1`] = `
<TouchableOpacity
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexShrink": 1,
        "justifyContent": "center",
        "marginHorizontal": 0,
        "minWidth": 60,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignContent": "center",
        "backgroundColor": "#037dd6",
        "borderRadius": 18,
        "height": 36,
        "justifyContent": "center",
        "paddingLeft": 1,
        "paddingTop": 4,
        "width": 36,
      }
    }
  >
    <Icon
      allowFontScaling={false}
      name="ios-add"
      size={30}
      style={
        Object {
          "alignContent": "center",
          "color": "#FFFFFF",
          "justifyContent": "center",
          "textAlign": "center",
        }
      }
    />
  </View>
  <Text
    black={false}
    blue={false}
    bold={false}
    centered={true}
    disclaimer={false}
    green={false}
    link={false}
    modal={false}
    numberOfLines={1}
    primary={false}
    red={false}
    reset={false}
    right={false}
    small={false}
    strikethrough={false}
    style={
      Object {
        "color": "#037dd6",
        "fontSize": 14,
        "marginTop": 8,
      }
    }
    underline={false}
    upper={false}
  />
</TouchableOpacity>
`;

exports[`AssetActionButtons should render type information correctly 1`] = `
<TouchableOpacity
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexShrink": 1,
        "justifyContent": "center",
        "marginHorizontal": 0,
        "minWidth": 60,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignContent": "center",
        "backgroundColor": "#037dd6",
        "borderRadius": 18,
        "height": 36,
        "justifyContent": "center",
        "paddingLeft": 1,
        "paddingTop": 4,
        "width": 36,
      }
    }
  >
    <Icon
      allowFontScaling={false}
      name="md-information"
      size={30}
      style={
        Object {
          "alignContent": "center",
          "color": "#FFFFFF",
          "justifyContent": "center",
          "textAlign": "center",
        }
      }
    />
  </View>
  <Text
    black={false}
    blue={false}
    bold={false}
    centered={true}
    disclaimer={false}
    green={false}
    link={false}
    modal={false}
    numberOfLines={1}
    primary={false}
    red={false}
    reset={false}
    right={false}
    small={false}
    strikethrough={false}
    style={
      Object {
        "color": "#037dd6",
        "fontSize": 14,
        "marginTop": 8,
      }
    }
    underline={false}
    upper={false}
  />
</TouchableOpacity>
`;

exports[`AssetActionButtons should render type receive correctly 1`] = `
<TouchableOpacity
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexShrink": 1,
        "justifyContent": "center",
        "marginHorizontal": 0,
        "minWidth": 60,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignContent": "center",
        "backgroundColor": "#037dd6",
        "borderRadius": 18,
        "height": 36,
        "justifyContent": "center",
        "paddingLeft": 1,
        "paddingTop": 4,
        "width": 36,
      }
    }
  >
    <Icon
      allowFontScaling={false}
      color="#FFFFFF"
      name="keyboard-tab"
      size={20}
      style={
        Array [
          Object {
            "alignContent": "center",
            "color": "#FFFFFF",
            "justifyContent": "center",
            "textAlign": "center",
          },
          Object {
            "bottom": 1,
            "right": 1,
            "transform": Array [
              Object {
                "rotate": "90deg",
              },
            ],
          },
        ]
      }
    />
  </View>
  <Text
    black={false}
    blue={false}
    bold={false}
    centered={true}
    disclaimer={false}
    green={false}
    link={false}
    modal={false}
    numberOfLines={1}
    primary={false}
    red={false}
    reset={false}
    right={false}
    small={false}
    strikethrough={false}
    style={
      Object {
        "color": "#037dd6",
        "fontSize": 14,
        "marginTop": 8,
      }
    }
    underline={false}
    upper={false}
  />
</TouchableOpacity>
`;

exports[`AssetActionButtons should render type send correctly 1`] = `
<TouchableOpacity
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexShrink": 1,
        "justifyContent": "center",
        "marginHorizontal": 0,
        "minWidth": 60,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignContent": "center",
        "backgroundColor": "#037dd6",
        "borderRadius": 18,
        "height": 36,
        "justifyContent": "center",
        "paddingLeft": 1,
        "paddingTop": 4,
        "width": 36,
      }
    }
  >
    <Icon
      allowFontScaling={false}
      name="arrow-top-right"
      size={20}
      style={
        Object {
          "alignContent": "center",
          "color": "#FFFFFF",
          "justifyContent": "center",
          "textAlign": "center",
        }
      }
    />
  </View>
  <Text
    black={false}
    blue={false}
    bold={false}
    centered={true}
    disclaimer={false}
    green={false}
    link={false}
    modal={false}
    numberOfLines={1}
    primary={false}
    red={false}
    reset={false}
    right={false}
    small={false}
    strikethrough={false}
    style={
      Object {
        "color": "#037dd6",
        "fontSize": 14,
        "marginTop": 8,
      }
    }
    underline={false}
    upper={false}
  />
</TouchableOpacity>
`;

exports[`AssetActionButtons should render type swap correctly 1`] = `
<TouchableOpacity
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexShrink": 1,
        "justifyContent": "center",
        "marginHorizontal": 0,
        "minWidth": 60,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "alignContent": "center",
        "backgroundColor": "#037dd6",
        "borderRadius": 18,
        "height": 36,
        "justifyContent": "center",
        "paddingLeft": 1,
        "paddingTop": 4,
        "width": 36,
      }
    }
  >
    <Icon
      allowFontScaling={false}
      name="repeat"
      size={22}
      style={
        Array [
          Object {
            "alignContent": "center",
            "color": "#FFFFFF",
            "justifyContent": "center",
            "textAlign": "center",
          },
          Object {
            "bottom": 0,
            "right": 0,
          },
        ]
      }
    />
  </View>
  <Text
    black={false}
    blue={false}
    bold={false}
    centered={true}
    disclaimer={false}
    green={false}
    link={false}
    modal={false}
    numberOfLines={1}
    primary={false}
    red={false}
    reset={false}
    right={false}
    small={false}
    strikethrough={false}
    style={
      Object {
        "color": "#037dd6",
        "fontSize": 14,
        "marginTop": 8,
      }
    }
    underline={false}
    upper={false}
  />
</TouchableOpacity>
`;
